app/cluster-b/virtualservice.yaml
# Expose our test-server service over the Gateway as `test-server.svc.b.remote`
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: b-remote-test-server
spec:
  gateways:
  - ingress-gateway
  # allow callers inside of this cluster to address us as "test-server.svc.b.remote" too
  - mesh
  hosts:
  - test-server.svc.b.remote
  http:
  - route:
    - destination:
        # note we assume we're in the same namespace as the test-server and don't use a FQDN
        host: test-server
